--- a/index.html
+++ b/index.html
@@ -258,5 +258,120 @@
         </section>
     </main>
 
+    <footer>
+        <div class="footer_container">
+            <div class="footer_main">
+                <div class="footer_top">
+                    <div class="company_logo">
+                        <a href="#" class="footer_logo">
+                            <img src="images/logo.svg" alt="logoimage" class="footer_svg">
+                            <span class="footer_title">StudySync</span>
+                        </a>
+                        <p class="footer_tagline">Seamless Learning for Brighter Future</p>
+                        <div class="social_icons">
+                            <a href="#">
+                                <img src="images/instagram.svg" alt="instagramsvg" class="social_svg">
+                            </a>
+                            <a href="#">
+                                <img src="images/linkedin2.svg" alt="linkedinsvg" class="social_svg">
+                            </a>
+                            <a href="#">
+                                <img src="images/github.svg" alt="githubsvg" class="social_svg">
+                            </a>
+                            <a href="#">
+                                <img src="images/twitter.svg" alt="twittersvg" class="social_svg">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_grid">
+                    <div class="footer_grid_columns">
+                        <div class="footer_grid_headings">
+                            Products
+                        </div>
+                        <ul class="footer_link_lists">
+                            <li>
+                                <a class="footer_links" href="#overview">Overview</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#solutions">Solutions</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#pricing">Pricing</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#customers">Customers</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer_grid_columns">
+                        <div class="footer_grid_headings">
+                            Company
+                        </div>
+                        <ul class="footer_link_lists">
+                            <li>
+                                <a class="footer_links" href="#about">About</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#investor">Investor</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#jobs">Jobs</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#press">Press</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#Blog">Blog</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer_grid_columns">
+                        <div class="footer_grid_headings">
+                            Support
+                        </div>
+                        <ul class="footer_link_lists">
+                            <li>
+                                <a class="footer_links" href="#contact">Contact</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#documentation">Documentation</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#chat">Chat</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#FAQ">FAQ</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer_grid_columns">
+                        <div class="footer_grid_headings">
+                            Legal
+                        </div>
+                        <ul class="footer_link_lists">
+                            <li>
+                                <a class="footer_links" href="#termsofservice">Terms of Service</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#privacypolicy">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a class="footer_links" href="#cookiesettings">Cookie settings</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer_copyright">
+                &copy; 2025 - Present StudySync. All Rights Reserved.
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
